@@ -12,16 +12,12 @@ AUX libGL.la-r2 733 RMD160 479612ab30c04ca0683c7d9edaf9ab3de783e4a9 SHA1 88656b7
 AUX nvidia 1510 RMD160 ca0d0e5375109d9edf682d9bdda743b7c693e4d4 SHA1 85cf9bff167dcc063ba61426523973e9598085f7 SHA256 b193cc3f6d6f39138720a2282d9f161fc8f2e8a15bc43d183a30eb879add06c5
 AUX nvidia-169.07 639 RMD160 8baddb6fd1bf7f0e2688870a78e8ace051d62e3f SHA1 b30487ba2a24a6b1359d1fd831eeb1705060953c SHA256 a8c4860f008d53776fda7a17b59524f271236559af688e9a2c9845cbbcba1577
 AUX nvidia-2.6.28.patch 5665 RMD160 a3575e7c8907955bfee6608bfd3ea7e30d8d5c3b SHA1 727a575105fb59eb67495ab35680e3095f6dec5a SHA256 ddb20b21074dd8bbf0bb32ac830b662bde77ba8dfd54ef515672876bb30f21e0
-DIST NVIDIA-FreeBSD-x86-180.41.tar.gz 18591553 RMD160 9bb02090aff222b946f6522b3776a9b285ec70e8 SHA1 32876cd879768399390adcb2d9595ddfe7b487b0 SHA256 e74eb78ee729a6a2cbaa95ad62572d262f928100fdde088aa9b4a3aa82c084f3
 DIST NVIDIA-FreeBSD-x86-185.13.tar.gz 19802484 RMD160 e398aeb7dfa0aa7dd231ce6a23ff28bbad115a4c SHA1 77e1f1d4c717a12f64aeab1874632832cfd627cf SHA256 85dbef9c1e1174438d6d6987ea89299790716029915b3a47536fc5fb4998b426
 DIST NVIDIA-FreeBSD-x86-185.19.tar.gz 19866641 RMD160 03c84d542f592efb20d2f27e4d3a71e4e1f92f69 SHA1 95a7cc48dce788b3e07323bbe85d651897ecbb4f SHA256 a4ab9f6598789e81574a61a05ff4f12e27c832dcec3f815d87eb07a937b085ab
-DIST NVIDIA-Linux-x86-180.41-pkg0.run 13563960 RMD160 5a3f095e7306ac1efdb9916a07e1a45945322670 SHA1 6f825a58e332dd8e561a079f47d298db39ca704a SHA256 a1a7b55a6044a89be211fe437dac966b72ae9659783f6d994fc6ca86442e00ed
 DIST NVIDIA-Linux-x86-185.13-pkg0.run 14729631 RMD160 3184e7ada85d440db80821136302b3484d7ee150 SHA1 05f053cf849d3e0776fd6b30863f72b0ceae84e1 SHA256 3497acdc1ec054c345d4ed8f35f242eb5aefefe5ff7d72cbc87e71e91e1d4a5f
 DIST NVIDIA-Linux-x86-185.19-pkg0.run 14771781 RMD160 1ad80cff76f52c71f5b16751f61717a59a93756c SHA1 837bdfdf9d0cedeb23256439713a0cbfd9189087 SHA256 f79615ea4afd6ee4471389e5e76d58fc1df72f56d6d2009f3c245cfba053c61c
-DIST NVIDIA-Linux-x86_64-180.41-pkg2.run 21468727 RMD160 bc71f42f6489561e0555a3801a6cbca72f98f700 SHA1 94a87bd19e619d1eceba0b11b83e8ede295584d9 SHA256 cc2009ced73b89bb845a5ff49da6aeff4f419a42ef89509fdd17cab32f18419a
 DIST NVIDIA-Linux-x86_64-185.13-pkg2.run 23384276 RMD160 5e13c82ab81a69f168298dad15ed5d1d0433a739 SHA1 ca594e5e821fe97d432f72f7bad2d8a51960cee3 SHA256 28595014da53ad6557222423a8dd9be84b72f139911d2157c66186180df895b5
 DIST NVIDIA-Linux-x86_64-185.19-pkg2.run 23458043 RMD160 e5951bf0001b0897806e820f63c54769297bf67b SHA1 523813449acb6fa91c46b62b15a5d3a2fb9bcd56 SHA256 43cca8302cb23cda259ad0befd559d986803be27dad2b4df43777d1f0eb4fac3
-EBUILD nvidia-drivers-180.41.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.13.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.19.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
-MISC ChangeLog 1094 RMD160 2b1e3dc87f884ec24c03b973a14744a5be84ac34 SHA1 0bf08841442c4511b7da090076e69bd6b1ee2b78 SHA256 4fd4ae26a13487f22ff72e05c947cd2ff53a68d766fcdb8681cf9b08e352902b
+MISC ChangeLog 1203 RMD160 0bedb3210d09a25e2437c664ae74c17ca254a4bf SHA1 f892007284f8d5d7da28e02633e37435ec5456ee SHA256 9b1662e1b8ca4a50e69f9073384753a08d797b36739b4657ad856f8ac6994a2f
