@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  -nvidia-drivers-180.41.ebuild:
+  in tree
+
 *nvidia-drivers-185.19 (06 Apr 2009)
 
   06 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
